# pauth_rc

./: .env.example  .gitignore  CLAUDE.md  README.md  analysis_unknown_20260130_083324.json  analysis_unknown_20260202_161425.json  render.yaml  requirements.txt
api_artifacts/: 6_chunks_3_reranked_400_tokens.json  analysis_mocked_patient_pass_20260127_163219.json  analysis_mocked_patient_pass_20260129_133308.json  analysis_unknown_20260129_155735.json  analysis_unknown_20260130_082332.json  analysis_unknown_20260130_094219.json  analysis_unknown_20260202_153605.json  analysis_unknown_20260202_162256.json  analysis_unknown_20260202_162924.json  analysis_unknown_20260203_113457.json  analysis_unknown_20260203_114413.json  analysis_unknown_20260203_123907.json  analysis_unknown_20260203_124818.json  analysis_unknown_20260203_145732.json  analysis_unknown_20260203_151822.json  analysis_unknown_20260203_152738.json  analysis_unknown_20260203_154311.json  analysis_unknown_20260203_160921.json  diagnostic_artifact_2.json  diagnostic_artifact_3.json  diagnostic_artifact_patient_01.2.json  diagnostic_artifact_patient_01.3.json  diagnostic_artifact_patient_01.json  diagnostic_artifact_patient_02.1.json  diagnostic_artifact_patient_02.json  diagnostic_artifact_patient_03.2.json  diagnostic_artifact_patient_03.json  diagnostic_artifact_patient_04.2.json  (+37 more)
app/: llm.py  main.py  pyproject.toml  reader.py  router.py  schemas.py  validation.py
app/prompts/: detail_prompt.py  structure_prompt.py
app/services/: compiler.py  detailer.py  structurer.py
backend/: .env.example  (+4 more)
(+189 files in other folders)
